# Switter

./: .gitignore  pyproject.toml  requirements.txt
switter/: Procfile  manage.py  requirements.txt
switter/switter/: asgi.py  settings.py  urls.py  wsgi.py
switter/switterapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
switter/switterapp/migrations/: 0001_initial.py  0002_alter_swits_likes.py  0003_alter_swits_likes.py  0004_remove_swits_likes.py  0005_swits_user.py  0006_likes.py  0007_dislikes.py  0008_comments.py  0009_swits_image.py
switter/switterapp/static/switterapp/: add_comment_style.css  add_swit_style.css  base_style.css  detail_swit_style.css  index-style.css  index_style.css
switter/switterapp/templates/switterapp/: add_comment.html  add_swit.html  base.html  detail_swit.html  index.html  manage_swit.html  show_comments.html
switter/users/: forms.py  models.py  urls.py  views.py
switter/users/migrations/: 0001_initial.py  0002_alter_profile_avatar.py  0003_followings.py
switter/users/static/users/: login_style.css  my_profile_style.css
switter/users/templates/users/: login.html  my_profile.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  show_followers.html  show_follows.html  signup.html  view_profile.html
